# PersonalDealIntelligence

./: AGENTS.md  MEMORY.md  Makefile  README.md  create_pdi_github_issues.py  create_pdi_github_issues.sh  pdi_github_issue_batch.json  pdi_github_issue_batch.md  pyproject.toml
.codex/: config.toml  hooks.json
.codex/rules/: repo-specific.rules
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: agentops.yml  ci.yml
config/: banking_alerts.yaml  banking_scoring.yaml  banking_sources.demo.yaml  banking_sources.yaml
docs/: decisions.md  issue-map.md  prompt-library.md  verification.md
docs/agentops/: README.md  agent-legibility-scorecard.md  chain-retrospective.md  concurrency.md  context-budget.md  context-budgeting.md  current-work-batches.md  folder-structure-map.md  function-call-registry.md  github-actions-runners.md  github-codex-runbook.md  harness-scorecard.md  hook-registry.md  improvement-backlog.md  issue-hygiene.md  mcp-registry.md  recurring-audits.md  sequential-chain-workflow.md  stale-knowledge-log.md  subagent-playbook.md  tool-registry.md
docs/architecture/: banking-mvp.md
docs/implementation-plans/: template.md
docs/release-checklists/: banking-mvp.md
docs/roadmap/: banking-v2.md  future-categories.md  future-features.md  ideas-parking-lot.md
docs/specs/: README.md
examples/: banking_deals.json
examples/demo_banking/: deal_blog_feed.xml  manifest.yaml  manual_ambiguous_savings.txt  manual_low_value_savings.txt  manual_non_deal.txt  newsletter_conflicting_checking.txt  (+4 more)
pdi/: __init__.py
scripts/: check_banking_demo.py
(+114 files in other folders)
